--- a/Hello Sage Cafe/index.html
+++ b/Hello Sage Cafe/index.html
@@ -10,7 +10,7 @@
     <div class="header">
         
         <h1>Hello Sage Cafe</h1>
-
+        <h2> Testing lang </h2>
     </div>
     <div class="headerbuttons">
         <a href="aboutUs.html"><b>About Us</b></a>
