--- a/Hello Sage Cafe/index.html
+++ b/Hello Sage Cafe/index.html
@@ -3,21 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Hello Sage Cafe </title>
+    <title>Hello Sage Cafe</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Header Section -->
     <div class="header">
-        
-        <h1>Hello Sage Cafe</h1>
-        <h2> Testing lang </h2>
-    </div>
-    <div class="headerbuttons">
-        <a href="aboutUs.html"><b>About Us</b></a>
+        <div class="logo">
+            <h1>Hello Sage Cafe</h1>
+        </div>
+        <nav class="nav-buttons">
+            <a href="#aboutUs">About Us</a>
+            <a href="#menu">Menu</a>
+            <a href="#contact">Contact</a>
+        </nav>
     </div>
 
-    <div class="bodyText">
-        <p>Welcome!</p>
+    <!-- Hero Section -->
+    <div class="hero">
+        <img src="image.jpg" alt="Hello Sage Cafe Menu">
     </div>
+
+    <!-- Menu Section -->
+    <div id="menu" class="menu-section">
+        <h2>Our Specialties</h2>
+        <div class="menu-items">
+            <div class="item">
+                <img src="Lecheroons.jpeg" alt="Lecheroons">
+                <p>Lecheroons - A fusion of macaroons and leche flan!</p>
+            </div>
+            <div class="item">
+                <img src="Goodmorningcookies.jpeg" alt="Good Morning Cookies">
+                <p>Good Morning Cookies - Perfect for your morning coffee!</p>
+            </div>
+            <div class="item">
+                <img src="Matchacookies.jpeg" alt="Matcha Sugar Cookies">
+                <p>Matcha Sugar Cookies - Sweet and earthy matcha goodness.</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- Footer Section -->
+    <footer class="footer">
+        <p>&copy; 2025 Hello Sage Cafe. All rights reserved.</p>
+    </footer>
 </body>
 </html>
