added owl image and adjusted spacings

--- a/Hello Sage Cafe/index.html
+++ b/Hello Sage Cafe/index.html
@@ -21,7 +21,7 @@
 
     <!-- Hero Section -->
     <div class="hero">
-        <img src="image.jpg" alt="Hello Sage Cafe Menu">
+        <img src="logo.jpg" alt="Hello Sage Cafe Menu">
     </div>
 
     <!-- Menu Section -->
