--- a/Hello Sage Cafe/index.html
+++ b/Hello Sage Cafe/index.html
@@ -21,7 +21,16 @@
 
     <!-- Hero Section -->
     <div class="hero">
-        <img src="logo.jpg" alt="Hello Sage Cafe Menu">
+        <div class="hero-section section-left">
+            <div class="text-content">
+                <h2>HSC: Your Daily Dose of Delight</h2>
+                <p>Enjoy variety of drinks, each crafted with passion and the finest ingredients.</p>
+                <a href="#" class="button">Order now</a>
+            </div>
+        </div>
+        <div class="hero-section section-right">
+            <img src="Hello sage main.jpg" alt="Hello Sage">
+        </div>
     </div>
 
     <!-- Menu Section -->
