lots of changes

--- a/Hello Sage Cafe/index.html
+++ b/Hello Sage Cafe/index.html
@@ -13,9 +13,9 @@
             <h1>Hello Sage Cafe</h1>
         </div>
         <nav class="nav-buttons">
-            <a href="#aboutUs">About Us</a>
+            <a href="aboutUs.html">About Us</a>
             <a href="#menu">Menu</a>
-            <a href="#contact">Contact</a>
+            <a href="contact.html">Contact</a>
         </nav>
     </div>
 
