lots and lots of changes

--- a/Hello Sage Cafe/index.html
+++ b/Hello Sage Cafe/index.html
@@ -9,7 +9,12 @@
 <body>
     <!-- Header Section -->
     <div class="header">
-        <div class="logo">
+        <div class="logo-container">
+            <div class="logo">
+                <a href="index.html">
+                    <img src="logo.jpg" alt="Hello Sage Cafe Logo">
+                </a>
+            </div>
             <h1>Hello Sage Cafe</h1>
         </div>
         <nav class="nav-buttons">
@@ -30,6 +35,18 @@
         </div>
         <div class="hero-section section-right">
             <img src="Hello sage main.jpg" alt="Hello Sage">
+        </div>
+    </div>
+
+    <!-- Rewards Section -->
+    <div class="rewards-section">
+        <div class="image-half">
+            <img src="Hello sage main 2.jpg" alt="Hello Sage Special Drink">
+        </div>
+        <div class="content-half">
+            <h2>It's a great day for a coffee and snack</h2>
+            <p>Start your Hello Sage journey with a coffee on us. Join now and enjoy a free handcrafted drink with a qualifying purchase during your first week.</p>
+            <a href="#" class="button">Join now</a>
         </div>
     </div>
 
