lots of changes

--- a/Hello Sage Cafe/contact.html
+++ b/Hello Sage Cafe/contact.html
@@ -4,18 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - Hello Sage Cafe</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Header Section -->
     <div class="header">
-        <div class="logo">
+        <div class="logo-container">
+            <div class="logo">
+                <a href="index.html">
+                    <img src="logo.jpg" alt="Hello Sage Cafe Logo">
+                </a>
+            </div>
             <h1>Hello Sage Cafe</h1>
         </div>
         <nav class="nav-buttons">
             <a href="index.html">Home</a>
             <a href="aboutUs.html">About Us</a>
-            <a href="index.html#menu">Menu</a>
+            <a href="menu.html">Menu</a>
             <a href="contact.html">Contact</a>
         </nav>
     </div>
