--- a/Hello Sage Cafe/menu.html
+++ b/Hello Sage Cafe/menu.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - Hello Sage Cafe</title>
+    <title>Menu - Hello Sage Cafe</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
@@ -28,23 +28,21 @@
         </nav>
     </div>
 
-    <!-- About Us Section -->
-    <div class="about-section">
-        <h2>Our Story</h2>
-        <div class="about-content">
-            <div class="about-text">
-                <p> di ko pa alam ilalagay dito ayokooo naaaa, yung content na nasa ibaba random lng yan</p>
-                <p>Our journey began with a simple idea: to create a cafe that not only serves delicious drinks and treats but also provides a warm, welcoming atmosphere for everyone who walks through our doors.</p>
-                <h3>Our Mission</h3>
-                <p>To provide exceptional quality beverages and treats while creating memorable experiences for our customers through outstanding service and a cozy atmosphere.</p>
-                <h3>Our Values</h3>
-                <ul>
-                    <li>Quality in every detail</li>
-                    <li>Passion for excellence</li>
-                    <li>Community connection</li>
-                    <li>Sustainable practices</li>
-                    <li>Customer satisfaction</li>
-                </ul>
+    <!-- Menu Section -->
+    <div class="menu-page">
+        <h2>Our Specialties</h2>
+        <div class="menu-items">
+            <div class="item">
+                <img src="Lecheroons.jpeg" alt="Lecheroons">
+                <p>Lecheroons - A fusion of macaroons and leche flan!</p>
+            </div>
+            <div class="item">
+                <img src="Goodmorningcookies.jpeg" alt="Good Morning Cookies">
+                <p>Good Morning Cookies - Perfect for your morning coffee!</p>
+            </div>
+            <div class="item">
+                <img src="Matchacookies.jpeg" alt="Matcha Sugar Cookies">
+                <p>Matcha Sugar Cookies - Sweet and earthy matcha goodness.</p>
             </div>
         </div>
     </div>
@@ -54,4 +52,4 @@
         <p>&copy; 2025 Hello Sage Cafe. All rights reserved.</p>
     </footer>
 </body>
-</html>
+</html> 
