--- a/Hello Sage Cafe/menu.html
+++ b/Hello Sage Cafe/menu.html
@@ -28,21 +28,83 @@
         </nav>
     </div>
 
-    <!-- Menu Section -->
-    <div class="menu-page">
-        <h2>Our Specialties</h2>
-        <div class="menu-items">
-            <div class="item">
-                <img src="Lecheroons.jpeg" alt="Lecheroons">
-                <p>Lecheroons - A fusion of macaroons and leche flan!</p>
+    <!-- Menu Grid -->
+    <div class="menu-grid">
+        <!-- Hawaiian Sandwich -->
+        <div class="menu-item">
+            <h2>HAWAIIAN SANDWICH</h2>
+            <div class="menu-image">
+                <img src="placeholder-sandwich.jpg" alt="Hawaiian Sandwich">
             </div>
-            <div class="item">
-                <img src="Goodmorningcookies.jpeg" alt="Good Morning Cookies">
-                <p>Good Morning Cookies - Perfect for your morning coffee!</p>
+            <div class="menu-details">
+                <p class="price">₱111</p>
             </div>
-            <div class="item">
-                <img src="Matchacookies.jpeg" alt="Matcha Sugar Cookies">
-                <p>Matcha Sugar Cookies - Sweet and earthy matcha goodness.</p>
+        </div>
+
+        <!-- Brigadeiro -->
+        <div class="menu-item">
+            <h2>BRIGADEIRO</h2>
+            <div class="menu-image">
+                <img src="placeholder-brigadeiro.jpg" alt="Brigadeiro">
+            </div>
+            <div class="menu-details">
+                <p class="price">₱333.00</p>
+            </div>
+        </div>
+
+        <!-- BCB Sandwich -->
+        <div class="menu-item">
+            <h2>BCB SANDWICH</h2>
+            <div class="menu-image">
+                <img src="placeholder-bcb.jpg" alt="BCB Sandwich">
+            </div>
+            <div class="menu-details">
+                <p class="price">₱65.00/PC</p>
+            </div>
+        </div>
+
+        <!-- Oreo Match -->
+        <div class="menu-item">
+            <h2>OREO MATCH</h2>
+            <div class="menu-image">
+                <img src="placeholder-oreo.jpg" alt="Oreo Match">
+            </div>
+            <div class="menu-details">
+                <p class="price">₱333.00</p>
+            </div>
+        </div>
+
+        <!-- Cheesy Potato Wedges -->
+        <div class="menu-item">
+            <h2>CHEESY POTATO WEDGES</h2>
+            <div class="menu-image">
+                <img src="placeholder-wedges.jpg" alt="Cheesy Potato Wedges">
+            </div>
+            <div class="menu-details">
+                <p class="price">₱123 / ₱246</p>
+                <p class="portion">solo / sharing</p>
+            </div>
+        </div>
+
+        <!-- Fudgy Matcha Cookies -->
+        <div class="menu-item">
+            <h2>FUDGY MATCHA COOKIES</h2>
+            <div class="menu-image">
+                <img src="placeholder-cookies.jpg" alt="Fudgy Matcha Cookies">
+            </div>
+            <div class="menu-details">
+                <p class="price">₱65.00/PC</p>
+            </div>
+        </div>
+
+        <!-- Matcha Beri -->
+        <div class="menu-item">
+            <h2>MATCHA BERI</h2>
+            <div class="menu-image">
+                <img src="placeholder-matcha.jpg" alt="Matcha Beri">
+            </div>
+            <div class="menu-details">
+                <p class="price">₱333.00</p>
             </div>
         </div>
     </div>
