--- a/Hello Sage Cafe/menu.html
+++ b/Hello Sage Cafe/menu.html
@@ -37,6 +37,7 @@
             </div>
             <div class="menu-details">
                 <p class="price">₱111</p>
+                <p class="description">A delicious sandwich with ham, pineapple, and melted cheese.</p>
             </div>
         </div>
 
@@ -82,6 +83,7 @@
             <div class="menu-details">
                 <p class="price">₱123 / ₱246</p>
                 <p class="portion">solo / sharing</p>
+                <p class="description">Crispy potato wedges topped with melted cheese and special sauce.</p>
             </div>
         </div>
 
