--- a/Hello Sage Cafe/aboutUs.html
+++ b/Hello Sage Cafe/aboutUs.html
@@ -24,6 +24,7 @@
             <a href="index.html">Home</a>
             <a href="menu.html">Menu</a>
             <a href="contact.html">Contact</a>
+            <a href="gallery.html">Gallery</a>
         </nav>
     </div>
 
@@ -32,17 +33,17 @@
         <h2>Our Story</h2>
         <div class="about-content">
             <div class="about-text">
-                <p> di ko pa alam ilalagay dito ayokooo naaaa, yung content na nasa ibaba random lng yan</p>
+                <p> placeholder placeholder placeholder</p>
                 <p>Our journey began with a simple idea: to create a cafe that not only serves delicious drinks and treats but also provides a warm, welcoming atmosphere for everyone who walks through our doors.</p>
                 <h3>Our Mission</h3>
                 <p>To provide exceptional quality beverages and treats while creating memorable experiences for our customers through outstanding service and a cozy atmosphere.</p>
                 <h3>Our Values</h3>
                 <ul>
-                    <li>Quality in every detail</li>
-                    <li>Passion for excellence</li>
-                    <li>Community connection</li>
-                    <li>Sustainable practices</li>
-                    <li>Customer satisfaction</li>
+                    <li>Placeholder</li>
+                    <li>Placeholder</li>
+                    <li>Placeholder</li>
+                    <li>Placeholder</li>
+                    <li>Placeholder</li>
                 </ul>
             </div>
         </div>
