--- a/Hello Sage Cafe/contact.html
+++ b/Hello Sage Cafe/contact.html
@@ -8,6 +8,172 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <style>
+        .contact-section {
+            padding: 60px 20px;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        .contact-section h2 {
+            color: #838216;
+            font-family: 'Playfair Display', serif;
+            font-weight: 700;
+            font-size: 2.5em;
+            margin-bottom: 40px;
+            text-align: center;
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+        }
+
+        .contact-container {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 40px;
+            margin-top: 40px;
+        }
+
+        .contact-info, .contact-form {
+            background-color: white;
+            padding: 40px;
+            border-radius: 15px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        .contact-info h3, .contact-form h3 {
+            font-family: 'Playfair Display', serif;
+            font-size: 1.8em;
+            margin-bottom: 30px;
+            color: #838216;
+        }
+
+        .info-item {
+            display: flex;
+            align-items: center;
+            margin-bottom: 25px;
+        }
+
+        .info-item i {
+            font-size: 1.5em;
+            margin-right: 15px;
+            width: 30px;
+            text-align: center;
+            color: #838216;
+        }
+
+        .info-item p {
+            margin: 0;
+            font-size: 1.1em;
+            line-height: 1.4;
+            font-family: 'Poppins', sans-serif;
+            font-weight: 300;
+            color: #3f3f26;
+        }
+
+        .business-hours {
+            margin-top: 30px;
+        }
+
+        .business-hours h4 {
+            font-family: 'Playfair Display', serif;
+            font-size: 1.3em;
+            margin-bottom: 15px;
+            color: #838216;
+        }
+
+        .hours-list {
+            list-style: none;
+            padding: 0;
+        }
+
+        .hours-list li {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 10px;
+            font-size: 1.1em;
+            font-family: 'Poppins', sans-serif;
+            font-weight: 300;
+            color: #3f3f26;
+        }
+
+        .social-links {
+            margin-top: 30px;
+            display: flex;
+            gap: 20px;
+        }
+
+        .social-links a {
+            color: #838216;
+            font-size: 1.8em;
+            transition: transform 0.3s ease, color 0.3s ease;
+        }
+
+        .social-links a:hover {
+            transform: translateY(-3px);
+            color: #FBA619;
+        }
+
+        .form-group {
+            margin-bottom: 20px;
+        }
+
+        .form-group label {
+            display: block;
+            margin-bottom: 8px;
+            color: #838216;
+            font-weight: 600;
+            font-size: 1.1em;
+            font-family: 'Poppins', sans-serif;
+        }
+
+        .form-group input,
+        .form-group textarea {
+            width: 100%;
+            padding: 12px;
+            border: 2px solid #838216;
+            border-radius: 8px;
+            font-size: 1em;
+            transition: border-color 0.3s ease;
+            font-family: 'Poppins', sans-serif;
+            font-weight: 300;
+            color: #3f3f26;
+        }
+
+        .form-group input:focus,
+        .form-group textarea:focus {
+            outline: none;
+            border-color: #FBA619;
+        }
+
+        .form-group textarea {
+            height: 150px;
+            resize: vertical;
+        }
+
+        .submit-button {
+            background-color: #838216;
+            color: white;
+            padding: 15px 30px;
+            border: none;
+            border-radius: 25px;
+            font-size: 1.1em;
+            font-weight: 600;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            width: 100%;
+            font-family: 'Poppins', sans-serif;
+        }
+
+        .submit-button:hover {
+            background-color: #FBA619;
+            transform: translateY(-2px);
+        }
+
+        @media (max-width: 768px) {
+            .contact-container {
+                grid-template-columns: 1fr;
+            }
+        }
+    </style>
 </head>
 <body>
     <!-- Header Section -->
@@ -24,6 +190,7 @@
             <a href="index.html">Home</a>
             <a href="aboutUs.html">About Us</a>
             <a href="menu.html">Menu</a>
+            <a href="gallery.html">Gallery</a>
         </nav>
     </div>
 
@@ -33,8 +200,8 @@
         <div class="contact-content">
             <div class="contact-info">
                 <h3>Visit Us</h3>
-                <p>123 Cafe Street</p>
-                <p>Manila, Philippines</p>
+                <p>Placeholder</p>
+                <p>Antipolo, Philippines</p>
                 <p>Phone: (123) 456-7890</p>
                 <p>Email: hello@hellosagecafe.com</p>
                 
