--- a/Hello Sage Cafe/index.html
+++ b/Hello Sage Cafe/index.html
@@ -6,7 +6,7 @@
     <title>Hello Sage Cafe</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Pacifico&family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -23,6 +23,7 @@
         <nav class="nav-buttons">
             <a href="aboutUs.html">About Us</a>
             <a href="menu.html">Menu</a>
+            <a href="gallery.html">Gallery</a>
             <a href="contact.html">Contact</a>
         </nav>
     </div>
