--- a/Hello Sage Cafe/menu.html
+++ b/Hello Sage Cafe/menu.html
@@ -24,6 +24,7 @@
             <a href="index.html">Home</a>
             <a href="aboutUs.html">About Us</a>
             <a href="contact.html">Contact</a>
+            <a href="gallery.html">Gallery</a>
         </nav>
     </div>
 
@@ -49,6 +50,7 @@
             </div>
             <div class="menu-details">
                 <p class="price">₱333.00</p>
+                <p class="description">Brigadeiro is a traditional Brazilian sweet treat made from condensed milk, cocoa powder, butter, and chocolate sprinkles..</p>
             </div>
         </div>
 
@@ -60,6 +62,7 @@
             </div>
             <div class="menu-details">
                 <p class="price">₱65.00/PC</p>
+                <p class="description">A delicious sandwich with ham, pineapple, and melted cheese.</p>
             </div>
         </div>
 
