--- a/Hello Sage Cafe/menu.html
+++ b/Hello Sage Cafe/menu.html
@@ -50,7 +50,7 @@
             </div>
             <div class="menu-details">
                 <p class="price">₱333.00</p>
-                <p class="description">Brigadeiro is a traditional Brazilian sweet treat made from condensed milk, cocoa powder, butter, and chocolate sprinkles..</p>
+                <p class="description">Brigadeiro is a traditional Brazilian sweet treat made from condensed milk, cocoa powder, butter, and chocolate sprinkles...</p>
             </div>
         </div>
 
