--- a/Hello Sage Cafe/gallery.html
+++ b/Hello Sage Cafe/gallery.html
@@ -215,6 +215,17 @@
             margin: 0 auto;
         }
 
+        .signature {
+            font-family: 'Playfair Display', serif;
+            font-style: italic;
+            font-size: 1.4em;
+            color: #838216;
+            text-align: right;
+            margin-top: 20px;
+            padding-right: 20px;
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+        }
+
         @media (max-width: 768px) {
             .banner-text {
                 font-size: 2em;
@@ -249,6 +260,7 @@
         <div class="banner-container">
             <h2 class="banner-text">Capturing Sweet Moments</h2>
             <p class="banner-subtext">Every dish tells a story, every sip creates a memory. Welcome to our visual journey through Hello Sage Cafe's delightful creations, where passion meets perfection in every frame.</p>
+            <p class="signature">- Drew Ramos</p>
         </div>
     </div>
 
