--- a/Hello Sage Cafe/gallery.html
+++ b/Hello Sage Cafe/gallery.html
@@ -8,7 +8,26 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="Transparent.png">
     <style>
+        .header {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            z-index: 1000;
+            background-color: #838216;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .banner-section {
+            margin-top: 100px;
+            width: 100%;
+            padding: 60px 0;
+            background-color: #FFDE61;
+            text-align: center;
+        }
+
         .gallery-section {
             padding: 40px 0;
             max-width: 100%;
@@ -184,13 +203,6 @@
             }
         }
 
-        .banner-section {
-            width: 100%;
-            padding: 60px 0;
-            background-color: #FFDE61;
-            text-align: center;
-        }
-
         .banner-container {
             max-width: 1000px;
             margin: 0 auto;
@@ -260,7 +272,6 @@
         <div class="banner-container">
             <h2 class="banner-text">Capturing Sweet Moments</h2>
             <p class="banner-subtext">Every dish tells a story, every sip creates a memory. Welcome to our visual journey through Hello Sage Cafe's delightful creations, where passion meets perfection in every frame.</p>
-            <p class="signature">- Drew Ramos</p>
         </div>
     </div>
 
