--- a/Hello Sage Cafe/menu.html
+++ b/Hello Sage Cafe/menu.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="Transparent.png">
 </head>
 <body>
     <!-- Header Section -->
@@ -50,7 +51,7 @@
             </div>
             <div class="menu-details">
                 <p class="price">₱333.00</p>
-                <p class="description">Brigadeiro is a traditional Brazilian sweet treat made from condensed milk, cocoa powder, butter, and chocolate sprinkles...</p>
+                <p class="description">Brigadeiro is a traditional Brazilian sweet treat made from condensed milk, cocoa powder, butter, and chocolate sprinkles..</p>
             </div>
         </div>
 
@@ -112,6 +113,7 @@
             </div>
         </div>
     </div>
+
 
     <!-- Footer Section -->
     <footer class="footer">
