--- a/Hello Sage Cafe/gallery.html
+++ b/Hello Sage Cafe/gallery.html
@@ -263,7 +263,7 @@
             <a href="index.html">Home</a>
             <a href="menu.html">Menu</a>
             <a href="contact.html">Contact</a>
-            <a href="gallery.html">Gallery</a>
+            <a href="aboutUs.html">About Us</a>
         </nav>
     </div>
 
