--- a/Hello Sage Cafe/aboutUs.html
+++ b/Hello Sage Cafe/aboutUs.html
@@ -29,6 +29,13 @@
         </nav>
     </div>
 
+    <!-- Hero Section -->
+    <div class="about-hero">
+        <div class="about-hero-content">
+            <h1>Our Story</h1>
+        </div>
+    </div>
+
     <!-- About Us Section -->
     <div class="about-section">
         <h2>Our Story</h2>
@@ -40,35 +47,35 @@
                     My love for baking opened new doors of opportunities to meet people—many of whom helped me build the cafe I had always dreamt of.
                     <hr>
                     My first platform was "Desserts by Drewwwlll" (@dessertsbydrewwwlll). 
-                    I started by baking cookies and cheesecakes, selling them to my former coworkers, and to my brother’s and sister’s friends and colleagues. 
+                    I started by baking cookies and cheesecakes, selling them to my former coworkers, and to my brother's and sister's friends and colleagues. 
                     At that time, I was just beginning to understand the deeper art of baking. 
                     I was a one-woman team—doing the baking, packing, distributing, and sometimes even the delivering. 
-                    It was a stark contrast to my old job of sitting at a desk all day. I was active, busy, and honestly, it felt really healthy for me! For three years, I managed everything—planning offerings, taking orders, baking, packing, and delivering. I became known for creating personalized cakes. But everything took a huge turn when I found out I was pregnant. At 30, I hadn’t expected it, especially after being told by doctors that it would be difficult for us to conceive. So I had found peace with raising my furbabies (three dogs and sixteen cats) and growing my online baking business.
+                    It was a stark contrast to my old job of sitting at a desk all day. I was active, busy, and honestly, it felt really healthy for me! For three years, I managed everything—planning offerings, taking orders, baking, packing, and delivering. I became known for creating personalized cakes. But everything took a huge turn when I found out I was pregnant. At 30, I hadn't expected it, especially after being told by doctors that it would be difficult for us to conceive. So I had found peace with raising my furbabies (three dogs and sixteen cats) and growing my online baking business.
                     <hr>
-                    I thought being pregnant wouldn’t stop what I was doing. I hoped it wouldn’t. But the first trimester hit me hard. 
-                    My body was doing things I didn’t understand. Mornings, which I used to love, became the hardest part of my day. 
-                    I wasn’t able to bake for nine months—and even for nearly two years after that. Still, my love for baking never left. 
+                    I thought being pregnant wouldn't stop what I was doing. I hoped it wouldn't. But the first trimester hit me hard. 
+                    My body was doing things I didn't understand. Mornings, which I used to love, became the hardest part of my day. 
+                    I wasn't able to bake for nine months—and even for nearly two years after that. Still, my love for baking never left. 
                     I remember writing my dreams down in a journal: my plans, my vision. When Sage was born, those dreams were put on pause, but I would often go back to that journal to remind myself what I wanted. 
                     I wanted to be a present mom, but I also wanted my dreams. 
-                    I wanted Sage to grow up seeing her mom go after what she loves. And that’s what I did—with the support of my husband, we made it happen. 
+                    I wanted Sage to grow up seeing her mom go after what she loves. And that's what I did—with the support of my husband, we made it happen. 
                     I reconnected with Pia, a classmate from baking school. She introduced me to her best friend Cy, a chef. Then we found Jhen, a barista. 
-                    That’s how our team was born. My brother-in-law, Kuya Khamer, whom I also consider a mentor, gave me the push I needed. He helped me visualize it and stood by me through the process.
+                    That's how our team was born. My brother-in-law, Kuya Khamer, whom I also consider a mentor, gave me the push I needed. He helped me visualize it and stood by me through the process.
                     <hr>
                     Our first cafe was located inside Antrips Antipolo, an Airbnb owned by friends. 
                     It was a great place to start, though the location lacked foot traffic. Six months later, we moved to Hollywood Terraces. 
-                    We didn’t plan on targeting students, but it felt like a realignment—and we embraced the challenge. As Sage grew up, so did the cafe. 
+                    We didn't plan on targeting students, but it felt like a realignment—and we embraced the challenge. As Sage grew up, so did the cafe. 
                     She became close to our regulars and staff. She practically grew up in the cafe.
                     <hr>
                     This May 23rd marks our 2nd anniversary. I now have a new team, as my original staff have moved on to their own paths. 
                     It was tough to transition after we had established a flow, but change also brings growth. Just like the many changes that came and went, we are entering a new era. 
-                    My love for writing is returning. Sage is becoming more playful and sociable—she loves to scribble and doodle. So, I love the idea that while she enjoys herself, I can enjoy what I love, too. A friend of mine inspired me, saying that starting over again might just be what’s needed. 
-                    It’s tough, but worth it—to give birth to new energy by integrating all the things I love.
+                    My love for writing is returning. Sage is becoming more playful and sociable—she loves to scribble and doodle. So, I love the idea that while she enjoys herself, I can enjoy what I love, too. A friend of mine inspired me, saying that starting over again might just be what's needed. 
+                    It's tough, but worth it—to give birth to new energy by integrating all the things I love.
                     <hr>
                     My original vision for the cafe was to create a place where people could be themselves, express freely, and connect. 
-                    Writing has always helped me process feelings I couldn’t always post online. That’s when I thought of having a “freedom wall”—a space where anyone can write anonymously. 
+                    Writing has always helped me process feelings I couldn't always post online. That's when I thought of having a "freedom wall"—a space where anyone can write anonymously. 
                     And I was amazed by how students expressed themselves. Some wrote about dreams, thoughts, even deeply personal things. People passing by would stop to read. I love how we can all resonate with each other. 
                     While not everything has unfolded yet, I am deeply grateful to everyone who visited the cafe—those who laughed with us, ordered food, enjoyed a drink, wrote, read, or simply sat in silence. 
-                        You are all manifestations of a dream I once wrote in my journal. And every day, I’m amazed that I get to live it—alongside Sage, my greatest inspiration.
+                        You are all manifestations of a dream I once wrote in my journal. And every day, I'm amazed that I get to live it—alongside Sage, my greatest inspiration.
                 </p>
                 
 
